Switch to using SiteLauncher in site shell script